--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Ignore Gradle project-specific cache directory
 .gradle
 
+# Ignore idea files
+.idea
+
 # Ignore Gradle build output directory
 build
