--- a/lib/src/test/resources/application.yml
+++ b/lib/src/test/resources/application.yml
@@ -1,14 +1,15 @@
 spring:
   main:
-#    web-application-type: none
+    web-application-type: none
     banner-mode: off
-#  jpa:
+  jpa:
+    defer-datasource-initialization: true
 #    database-platform: org.hibernate.dialect.H2Dialect
 #    show-sql: true
 #    hibernate:
-#      ddl-auto: create
+#      ddl-auto: create-drop
 #  datasource:
 #    driver-class-name: org.h2.Driver
-#    url: jdbc:hsqldb:mem:testdb
+#    url: jdbc:h2:mem:testdb
 #    username: sa
-#    password: 
+#    password:
