Add Eclipse files to ignore
Change-Id: Ic3062e0a76e3fe3e3f172835ae704a6d47681796

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,10 @@
 # Ignore idea files
 .idea
 
+# Ignore Eclipse files
+.settings
+.project
+.classpath
+
 # Ignore Gradle build output directory
 build
