--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,14 @@ repositories {
 
 dependencies {
 	implementation project(':lib')
+
+    implementation 'org.springframework.boot:spring-boot-starter:3.0.2'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.2'
 	//implementation 'com.yandex.android:disk-restapi-sdk:1.03'
-	
+
+    runtimeOnly 'com.h2database:h2:2.1.214'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.0.2'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
 }
 
@@ -38,3 +43,5 @@ publishing {
         mavenLocal()
     }
 }
+
+mainClassName = 'moviechecker.CheckerMain'
