fix publishing to maven local

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -29,7 +29,9 @@ tasks.named('test') {
 }
 
 publishing {
-    repositories {
-        mavenLocal()
+    publications {
+        lib(MavenPublication) {
+            from components.java
+        }
     }
 }
