--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
 	id 'eclipse'
 	id 'application'
 	id 'maven-publish'
-    id 'org.springframework.boot' version '3.0.2'
+    id 'org.springframework.boot' version '3.1.0'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -33,8 +33,10 @@ tasks.named('test') {
 }
 
 publishing {
-    repositories {
-        mavenLocal()
+    publications {
+        app(MavenPublication) {
+            from components.java
+        }
     }
 }
 
