--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ repositories {
 }
 
 dependencies {
-	implementation project(':lib')
+	implementation project(':database')
 
     implementation 'org.springframework.boot:spring-boot-starter:3.1.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
