--- a/database/build.gradle
+++ b/database/build.gradle
@@ -2,10 +2,11 @@ plugins {
     id 'java-library'
 	id 'eclipse'
 	id 'maven-publish'
-    id 'org.springframework.boot' version '3.0.2'
+    id 'org.springframework.boot' version '3.1.0'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
+group = 'moviechecker'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
@@ -17,6 +18,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter:3.1.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
+    testImplementation project(path: ':data-source')
 
     runtimeOnly 'com.h2database:h2:2.1.214'
 
