--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -2,10 +2,11 @@ plugins {
     id 'java-library'
     id 'application' // Для заупуска демострации. В конечном варианте поставщика данных эта строка не требуется.
 	id 'eclipse'
-    id 'org.springframework.boot' version '3.0.2'
+    id 'org.springframework.boot' version '3.1.0'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
+group = 'moviechecker.demo'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
@@ -25,6 +26,7 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter:3.1.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
+    implementation project(path: ':data-source')
 
     runtimeOnly 'com.h2database:h2:2.1.214'
 
