--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     //implementation 'com.yandex.android:disk-restapi-sdk:1.03'
 
     runtimeOnly 'com.h2database:h2:2.1.214'
+    runtimeOnly project(':lostfilm')
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
