--- a/lostfilm/build.gradle
+++ b/lostfilm/build.gradle
@@ -14,6 +14,7 @@ repositories {
 dependencies {
     implementation project(path: ':data-source')
     implementation 'org.springframework.boot:spring-boot-starter:3.1.0'
+    implementation project(path: ':database')
 }
 
 test {
