trying to use dependency inversion

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,14 @@ include 'data-source'
 include 'app'
 include 'demo'
 include 'lostfilm'
+include 'database:api'
+findProject(':database:api')?.name = 'api'
+include 'app:di'
+findProject(':app:di')?.name = 'di'
+include 'app:di'
+findProject(':app:di')?.name = 'di'
+include 'database:di'
+findProject(':database:di')?.name = 'di'
+include 'database:api'
+findProject(':database:api')?.name = 'api'
 
