--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,11 +17,12 @@ repositories {
 }
 
 dependencies {
-	implementation project(':database')
-
     implementation 'org.springframework.boot:spring-boot-starter:3.1.0'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
     implementation project(path: ':data-source')
+    implementation project(path: ':app:di')
+    implementation project(path: ':database:api')
+    implementation project(':database')
     //implementation 'com.yandex.android:disk-restapi-sdk:1.03'
 
     runtimeOnly 'com.h2database:h2:2.1.214'
