--- a/data-source/build.gradle
+++ b/data-source/build.gradle
@@ -1,9 +1,6 @@
 plugins {
     id 'java-library'
     id 'eclipse'
-    id 'maven-publish'
-    id 'org.springframework.boot' version '3.1.0'
-    id 'io.spring.dependency-management' version '1.1.0'
 }
 
 group = 'moviechecker'
@@ -16,24 +13,12 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter:3.1.0'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
-    implementation project(path: ':database')
-
-    runtimeOnly 'com.h2database:h2:2.1.214'
-
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.2'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.1.0'
+    implementation('org.springframework:spring-beans:6.0.2')
+    implementation('org.springframework:spring-context:6.0.2')
+    implementation project(path: ':database:di')
+    implementation project(path: ':database:api')
 }
 
 tasks.named('test') {
     useJUnitPlatform()
-}
-
-publishing {
-    publications {
-        lib(MavenPublication) {
-            from components.java
-        }
-    }
 }
