--- a/database/build.gradle
+++ b/database/build.gradle
@@ -18,6 +18,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter:3.1.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.0.4'
+    implementation project(path: ':app:di')
+    implementation project(path: ':database:di')
+    implementation project(path: ':database:api')
     testImplementation project(path: ':data-source')
 
     runtimeOnly 'com.h2database:h2:2.1.214'
