--- a/lostfilm/build.gradle
+++ b/lostfilm/build.gradle
@@ -12,9 +12,11 @@ repositories {
 }
 
 dependencies {
+    implementation('org.springframework:spring-context:6.0.2')
     implementation project(path: ':data-source')
-    implementation 'org.springframework.boot:spring-boot-starter:3.1.0'
     implementation project(path: ':database')
+    implementation project(path: ':database:di')
+    implementation project(path: ':app:di')
 }
 
 test {
