--- a/app/di/build.gradle
+++ b/app/di/build.gradle
@@ -10,8 +10,7 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation("org.springframework:spring-context:6.0.2")
 }
 
 test {
