--- a/data-source/build.gradle
+++ b/data-source/build.gradle
@@ -16,7 +16,7 @@ dependencies {
     implementation('org.springframework:spring-beans:6.0.2')
     implementation('org.springframework:spring-context:6.0.2')
     implementation project(path: ':database:di')
-    implementation project(path: ':database:api')
+    implementation project(path: ':app:di')
 }
 
 tasks.named('test') {
