--- a/core/di/build.gradle
+++ b/core/di/build.gradle
@@ -3,7 +3,9 @@ plugins {
 }
 
 group = 'moviechecker.core'
-version = 'unspecified'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = JavaVersion.VERSION_17
+targetCompatibility = JavaVersion.VERSION_17
 
 repositories {
     mavenCentral()
