--- a/database/build.gradle
+++ b/database/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     id 'java-library'
-	id 'eclipse'
-	id 'maven-publish'
+	//id 'maven-publish'
+	
     id 'org.springframework.boot' version '3.1.0'
     id 'io.spring.dependency-management' version '1.1.0'
 }
@@ -31,10 +31,10 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
-publishing {
-    publications {
-        lib(MavenPublication) {
-            from components.java
-        }
-    }
-}
+//publishing {
+//    publications {
+//        lib(MavenPublication) {
+//            from components.java
+//        }
+//    }
+//}
