--- a/datasource/build.gradle
+++ b/datasource/build.gradle
@@ -1,6 +1,5 @@
 plugins {
-    id 'java-library'
-    id 'eclipse'
+    id 'java'
 }
 
 group = 'moviechecker'
@@ -13,8 +12,8 @@ repositories {
 }
 
 dependencies {
-    implementation('org.springframework:spring-beans:6.0.2')
-    implementation('org.springframework:spring-context:6.0.2')
+    implementation 'org.springframework:spring-beans:6.0.2'
+    implementation 'org.springframework:spring-context:6.0.2'
 
     implementation project(path: ':core:di')
     implementation project(path: ':datasource:di')
